[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jasmin"
version = "0.12"
description = "Jasmin is a very complete open source SMS Gateway with many enterprise-class features."
readme = "README.rst"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Jookies LTD", email = "jasmin@jookies.net" }]
keywords = ["jasmin", "sms", "messaging", "smpp", "smsc", "smsgateway"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Twisted",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Communications",
    "Topic :: Communications :: Telephony",
]
dependencies = [
    "pyasn1~=0.6.1",
    "Twisted~=23.10.0",
    "treq~=24.9.1",
    "pyparsing~=3.1.1",
    "python-dateutil~=2.8.2",
    "service_identity~=24.2.0",
    "lockfile~=0.12.2",
    "falcon~=3.1.3",
    "txredisapi~=1.4.7",
    "tabulate~=0.8.7",
    "txAMQP3~=0.9.4",
    "smpp.pdu3~=0.6",
    "smpp.twisted3~=0.8",
    "python-messaging~=0.5.13",
    "cryptography~=43.0.0",
    "pyopenssl~=24.2.0",
    "celery~=5.4.0",
    "redis~=5.1.0",
    "requests~=2.32.3",
    "python-mimeparse~=1.6.0",
    "prometheus-client~=0.21.0",
]

[project.optional-dependencies]
test = [
    "testfixtures>=3.0.0",
    "sphinx>=1.1.0",
    "pylint",
    "coverage",
    "coveralls",
    "furo~=2023.9.10",
]

[project.urls]
Homepage = "https://www.jasminsms.com"

[tool.setuptools]
include-package-data = true
script-files = [
    "jasmin/bin/jasmind.py",
    "jasmin/bin/interceptord.py",
    "jasmin/bin/dlrd.py",
    "jasmin/bin/dlrlookupd.py",
    "jasmin/bin/deliversmd.py",
]

[tool.setuptools.packages.find]
exclude = ["tests*"]
